--- a/iTrain/Base.lproj/Main.storyboard
+++ b/iTrain/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                                 <rect key="frame" x="139" y="352" width="97" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -141,7 +141,7 @@
                     <navigationItem key="navigationItem" title="Passenger Login" id="hc3-rh-VNH">
                         <barButtonItem key="rightBarButtonItem" title="Submit" id="iG4-sl-iit">
                             <connections>
-                                <segue destination="hPt-kh-gsO" kind="push" id="yfr-lp-EYa"/>
+                                <segue destination="hPt-kh-gsO" kind="modal" identifier="pass_success" id="yfr-lp-EYa"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -161,7 +161,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="passenger_options" id="6kA-Nr-JGe">
-                                <rect key="frame" x="0.0" y="86" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6kA-Nr-JGe" id="kiv-ch-v4S">
                                     <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
